--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/teamrun/Composer/issues"
   },
-  "homepage": "https://github.com/teamrun/Composer"
+  "homepage": "https://github.com/teamrun/Composer",
+  "devDependencies": {
+    "showdown": "^0.3.1"
+  }
 }
